# RUSTnGo

./: .gitignore  Cargo.toml  LICENSE  README.md  game2bin  test-cpy
demos/: Cargo.toml
demos/.cargo/: config.toml
rustngo-fw/: Cargo.toml  build.rs  link.x
rustngo-fw/.cargo/: config.toml
rustngo-fw/src/: loader.rs  main.rs  syscall.rs  wrap.rs
rustngo-lib/: Cargo.toml  Embed.toml  build.rs  link.x
rustngo-lib/.cargo/: config.toml
rustngo-lib/src/: lib.rs  reset.rs
